<?xml version="1.0"?>
<package>
  <name>cisstOurStereoVision</name>
  <version>1.2.0</version>
  <description>The cisstOurStereoVision package</description>

  <maintainer email="zihan.chen@jhu.edu">Zihan Chen</maintainer>
  <license>CISST</license>

  <author email="anton.deguet@jhu.edu">Anton Deguet</author>
  <author email="zihan.chen@jhu.edu">Zihan Chen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
