<package>
  <name>saw_intuitive_research_kit</name>
  <version>1.4.0</version>
  <description>
  sawIntuitiveResearchKit
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawIntuitiveResearchKit</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>

  <build_depend>saw_keyboard</build_depend>
  <build_depend>saw_text_to_speech</build_depend>
  <build_depend>saw_controllers</build_depend>
  <build_depend>saw_constraint_controller</build_depend>
  <build_depend>saw_robot_io_1394</build_depend>


  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>


    <run_depend>geometry_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>

  <run_depend>saw_keyboard</run_depend>
  <run_depend>saw_controllers</run_depend>
  <run_depend>saw_constraint_controller</run_depend>
  <run_depend>saw_robot_io_1394</run_depend>



  <export>
    <build_type>catkin</build_type>
  </export>

</package>
